--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!--page-header-->
-    <header>
+    <header class="main-header">
       <div class="page-header container">
         <!--page-nav-->
 
@@ -135,146 +135,154 @@
           <ul class="our-team list">
             <li class="item">
               <img class="member-photo" src="./images/Nikolay-Kucherenko.jpg" alt="Николай Кучеренко" width="270" height="260" />
-              <h3 class="teams-member">Николай Кучеренко</h3>
-              <p class="occupations">Product Designer</p>
-              <ul class="social list">
-                <li class="item">
-                  <a class="link" href="#" aria-label="instagram">
-                    <svg class="social-icon" width="44" height="44">
-                     <use href="./images/sprite-icon.svg#icon-instagram" ></use>
-                    </svg>
-                  </a>
-               </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="twitter"> 
-                    <svg class="social-icon" width="44" height="44">
-                      <use href="./images/sprite-icon.svg#icon-twitter" ></use>
-                    </svg> 
-                  </a>
-                </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="facebook"> 
-                    <svg class="social-icon" width="44" height="44">
-                      <use href="./images/sprite-icon.svg#icon-facebook" ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="linkedin">
-                    <svg class="social-icon" width="44" height="44">
-                     <use href="./images/sprite-icon.svg#icon-linkedin" ></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="team-label">
+                <h3 class="teams-member">Николай Кучеренко</h3>
+                <p class="occupations">Product Designer</p>
+                <ul class="social list">
+                  <li class="item">
+                    <a class="link" href="#" aria-label="instagram">
+                      <svg class="social-icon" width="44" height="44">
+                      <use href="./images/sprite-icon.svg#icon-instagram" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="twitter"> 
+                      <svg class="social-icon" width="44" height="44">
+                        <use href="./images/sprite-icon.svg#icon-twitter" ></use>
+                      </svg> 
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="facebook"> 
+                      <svg class="social-icon" width="44" height="44">
+                        <use href="./images/sprite-icon.svg#icon-facebook" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="linkedin">
+                      <svg class="social-icon" width="44" height="44">
+                      <use href="./images/sprite-icon.svg#icon-linkedin" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="item">
               <img class="member-photo" src="./images/Olga-Ivanova.jpg" alt="Ольга Иванова" width="270" height="260" />
-              <h3 class="teams-member">Ольга Иванова</h3>
-              <p class="occupations">Frontend Developer</p>
-              <ul class="social list">
-                <li class="item">
-                  <a class="link" href="#" aria-label="instagram">
-                    <svg class="social-icon" width="44" height="44">
-                     <use href="./images/sprite-icon.svg#icon-instagram" ></use>
-                    </svg>
-                  </a>
-               </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="twitter"> 
-                    <svg class="social-icon" width="44" height="44">
-                      <use href="./images/sprite-icon.svg#icon-twitter" ></use>
-                    </svg> 
-                  </a>
-                </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="facebook"> 
-                    <svg class="social-icon" width="44" height="44">
-                      <use href="./images/sprite-icon.svg#icon-facebook" ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="linkedin">
-                    <svg class="social-icon" width="44" height="44">
-                     <use href="./images/sprite-icon.svg#icon-linkedin" ></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="team-label">
+                <h3 class="teams-member">Ольга Иванова</h3>
+                <p class="occupations">Frontend Developer</p>
+                <ul class="social list">
+                  <li class="item">
+                    <a class="link" href="#" aria-label="instagram">
+                      <svg class="social-icon" width="44" height="44">
+                      <use href="./images/sprite-icon.svg#icon-instagram" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="twitter"> 
+                      <svg class="social-icon" width="44" height="44">
+                        <use href="./images/sprite-icon.svg#icon-twitter" ></use>
+                      </svg> 
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="facebook"> 
+                      <svg class="social-icon" width="44" height="44">
+                        <use href="./images/sprite-icon.svg#icon-facebook" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="linkedin">
+                      <svg class="social-icon" width="44" height="44">
+                      <use href="./images/sprite-icon.svg#icon-linkedin" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="item">
               <img class="member-photo" src="./images/Andrey-Shevchenko.jpg" alt="Андрей Шевченко" width="270" height="260" />
-              <h3 class="teams-member">Андрей Шевченко</h3>
-              <p class="occupations">Marketing</p>
-              <ul class="social list">
-                <li class="item">
-                  <a class="link" href="#" aria-label="instagram">
-                    <svg class="social-icon" width="44" height="44">
-                     <use href="./images/sprite-icon.svg#icon-instagram" ></use>
-                    </svg>
-                  </a>
-               </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="twitter"> 
-                    <svg class="social-icon" width="44" height="44">
-                      <use href="./images/sprite-icon.svg#icon-twitter" ></use>
-                    </svg> 
-                  </a>
-                </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="facebook"> 
-                    <svg class="social-icon" width="44" height="44">
-                      <use href="./images/sprite-icon.svg#icon-facebook" ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="linkedin">
-                    <svg class="social-icon" width="44" height="44">
-                     <use href="./images/sprite-icon.svg#icon-linkedin" ></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="team-label">
+                <h3 class="teams-member">Андрей Шевченко</h3>
+                <p class="occupations">Marketing</p>
+                <ul class="social list">
+                  <li class="item">
+                    <a class="link" href="#" aria-label="instagram">
+                      <svg class="social-icon" width="44" height="44">
+                      <use href="./images/sprite-icon.svg#icon-instagram" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="twitter"> 
+                      <svg class="social-icon" width="44" height="44">
+                        <use href="./images/sprite-icon.svg#icon-twitter" ></use>
+                      </svg> 
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="facebook"> 
+                      <svg class="social-icon" width="44" height="44">
+                        <use href="./images/sprite-icon.svg#icon-facebook" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="linkedin">
+                      <svg class="social-icon" width="44" height="44">
+                      <use href="./images/sprite-icon.svg#icon-linkedin" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="item">
               <img class="member-photo" src="./images/Ivan-Nikolaev.jpg" alt="Иван Николаев" width="270" height="260" />
-              <h3 class="teams-member">Иван Николаев</h3>
-              <p class="occupations">UI Designer</p>
-              <ul class="social list">
-                <li class="item">
-                  <a class="link" href="#" aria-label="instagram">
-                    <svg class="social-icon" width="44" height="44">
-                     <use href="./images/sprite-icon.svg#icon-instagram" ></use>
-                    </svg>
-                  </a>
-               </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="twitter"> 
-                    <svg class="social-icon" width="44" height="44">
-                      <use href="./images/sprite-icon.svg#icon-twitter" ></use>
-                    </svg> 
-                  </a>
-                </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="facebook"> 
-                    <svg class="social-icon" width="44" height="44">
-                      <use href="./images/sprite-icon.svg#icon-facebook" ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item">
-                  <a class="link" href="#" aria-label="linkedin">
-                    <svg class="social-icon" width="44" height="44">
-                     <use href="./images/sprite-icon.svg#icon-linkedin" ></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="team-label">
+                <h3 class="teams-member">Иван Николаев</h3>
+                <p class="occupations">UI Designer</p>
+                <ul class="social list">
+                  <li class="item">
+                    <a class="link" href="#" aria-label="instagram">
+                      <svg class="social-icon" width="44" height="44">
+                      <use href="./images/sprite-icon.svg#icon-instagram" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="twitter"> 
+                      <svg class="social-icon" width="44" height="44">
+                        <use href="./images/sprite-icon.svg#icon-twitter" ></use>
+                      </svg> 
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="facebook"> 
+                      <svg class="social-icon" width="44" height="44">
+                        <use href="./images/sprite-icon.svg#icon-facebook" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item">
+                    <a class="link" href="#" aria-label="linkedin">
+                      <svg class="social-icon" width="44" height="44">
+                      <use href="./images/sprite-icon.svg#icon-linkedin" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             
           </ul>
@@ -336,8 +344,8 @@
     <!--page-footer-->
     <footer class="main-footer ">
 
-     <div class="container">
-      <div class="page-footer" >       
+     <div class="page-footer container">
+             
         <!--footer-contacts-->
 
         <div class="footer-contacts">
@@ -347,8 +355,8 @@
           <address>
             <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list">
-              <li><a class="footer-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-              <li><a class="footer-contacts tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+              <li><a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+              <li><a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
           </address>
         </div>
@@ -393,13 +401,7 @@
         <div>
           <h3 class="subscribe">Подпишитесь на рассылку</h3>
         </div>
-     </div>
-
-      <!--footer-Developed-by-->
-      <div>
-        <p class="developed">2020 | Developed by GoIT Students</p>
-      </div>
-     </div>
+     </div>      
 
     </footer>
 
